--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
         <div class="card2">
             <img src="arpanet.png" alt="Arpanet" class="a">
-            <img src="tcpip2.png" alt="TCPIP" class="b">
+            <img src="tcpip2.png" alt="TCPIP" class="c">
         </div>
     </div>
     
